# Olio-ohjelmointi

./: .gitignore.txt
KotiTeht1/: CMakeLists.txt  main.cpp
KotiTeht2/: CMakeLists.txt  main.cpp
KotiTeht3/: CMakeLists.txt  main.cpp
KotiTeht4/: CMakeLists.txt  asunto.h  katutaso.h  kerros.h  kerrostalo.h  main.cpp
KotiTeht6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
